API-integration, CSS-styling

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -31,18 +31,16 @@
     height: 500px;
     position: relative;
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
     img {
         height: 200px;
         width: 100%;
         object-fit: cover;
     }
 
-    .card-body {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
 }
 
 .btn-delete {
@@ -51,25 +49,28 @@
     top: 10px;
 }
 
-.card-description {
-    padding: 16px;
-
-    h5 {
-        font-weight: bold;
-        font-size: 24px;
-    }
+.card-recipe {
+    align-items: stretch;
+    .card-description {
+        padding: 16px;
+            h5 {
+                font-weight: bold;
+                font-size: 24px;
+            }
+            
+            p {
+                font-size: 14px;
+            }
+    }  
     
-    p {
-        font-size: 14px;
-    }
+    .card-bottom {
+        display: flex;
+        margin: 16px;
+        justify-content: space-between;
+            p {
+                font-size: 14px;
+            }
+        }
 }
 
-.card-bottom {
-    display: flex;
-    flex-grow: 1;
-    align-items: flex-end;
-    justify-content: space-between;
-    p {
-        font-size: 14px;
-    }
-}
+
