--- a/app/assets/stylesheets/components/_backdrop.scss
+++ b/app/assets/stylesheets/components/_backdrop.scss
@@ -2,4 +2,11 @@
     background-color: rgba(0,0,0,0.7);
     border-radius: 10%;
     padding: 15px;
+    h1, h3 {
+      font-weight: bold;  
+    }
+    p {
+        font-size: 20px;
+    }
+    
 }
